# calendar-telegram

./: LICENSE  README.md  bot.py  bot_example.py  messages.py  pyproject.toml  requirements.txt  setup.py  telegramcalendar.py  telegramjcalendar.py  telegramoptions.py  utils.py
src/calendar_telegram/: telegramcalendar.py
