[tool.poetry]
name = "calendar-telegram"
version = "0.1.1"
description = "Datepicker for python-telegram-bot"
authors = []

[tool.poetry.dependencies]
python = "^3.5"
python-telegram-bot = "^12.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
